<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <FrameLayout
      app:layout_constraintBottom_toTopOf="@+id/container"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/text_view"
            android:ellipsize="end"
            android:layout_marginHorizontal="@dimen/margin_textView"
            android:maxLines="1"
            android:layout_marginEnd="32sp"
            android:layout_gravity="bottom|end"
            android:textColor="@color/white"
            android:textSize="80dp"
            android:text="@string/_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/container"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">




        <LinearLayout
        android:paddingVertical="@dimen/paddingVertical"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        
        <com.google.android.material.button.MaterialButton
            style="@style/Grey.Button"
            android:onClick="onNumberClick"
            android:id="@+id/btn_clear"
            android:text="@string/ac"
           />


        <com.google.android.material.button.MaterialButton
            style="@style/Grey.Button"
            android:layout_marginHorizontal="@dimen/marginHorizontal"
            android:text="@string/plus_and_minus"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Grey.Button"
            android:layout_marginEnd="@dimen/marginEnd"
            android:text="@string/percent"
          />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_division"
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:text="@string/division" />


        </LinearLayout>
        <LinearLayout
            android:paddingVertical="@dimen/paddingVertical"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.button.MaterialButton
                style="@style/Dark_Grey.Button"
                android:onClick="onNumberClick"
                android:id="@+id/btn_seven"
                android:text="@string/_7"
                />


            <com.google.android.material.button.MaterialButton
                style="@style/Dark_Grey.Button"
                android:layout_marginHorizontal="@dimen/marginHorizontal"
                android:onClick="onNumberClick"
                android:id="@+id/btn_eight"
                android:text="@string/_8"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Dark_Grey.Button"
                android:layout_marginEnd="@dimen/marginEnd"
                android:onClick="onNumberClick"
                android:id="@+id/btn_nine"
                android:text="@string/_9"
                />

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:id="@+id/btn_multiplier"
                android:text="@string/x"/>



        </LinearLayout>
        <LinearLayout
            android:paddingVertical="@dimen/paddingVertical"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.button.MaterialButton
                style="@style/Dark_Grey.Button"
                android:onClick="onNumberClick"
                android:id="@+id/btn_four"
                android:text="@string/_4"
                />


            <com.google.android.material.button.MaterialButton
                style="@style/Dark_Grey.Button"
                android:layout_marginHorizontal="@dimen/marginHorizontal"
                android:onClick="onNumberClick"
                android:id="@+id/btn_five"
                android:text="@string/_5"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Dark_Grey.Button"
                android:layout_marginEnd="@dimen/marginEnd"
                android:onClick="onNumberClick"
                android:id="@+id/btn_six"
                android:text="@string/_6"
                />

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:id="@+id/btn_minus"
                android:text="@string/minus"/>



        </LinearLayout>
        <LinearLayout
            android:paddingVertical="@dimen/paddingVertical"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.button.MaterialButton
                style="@style/Dark_Grey.Button"
                android:onClick="onNumberClick"
                android:id="@+id/btn_one"
                android:text="@string/_1"
                />


            <com.google.android.material.button.MaterialButton
                style="@style/Dark_Grey.Button"
                android:layout_marginHorizontal="@dimen/marginHorizontal"
                android:onClick="onNumberClick"
                android:id="@+id/btn_two"
                android:text="@string/_2"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Dark_Grey.Button"
                android:layout_marginEnd="@dimen/marginEnd"
                android:onClick="onNumberClick"
                android:id="@+id/btn_three"
                android:text="@string/_3"
                />

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:id="@+id/btn_plus"
                android:onClick="onOperationClick"
                android:text="@string/plus"/>



        </LinearLayout>
        <LinearLayout
            android:paddingVertical="@dimen/paddingVertical"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.button.MaterialButton
                style="@style/Dark_Grey.Button"
                android:layout_width="@dimen/width"
                android:textAlignment="textStart"
                android:paddingStart="@dimen/paddingStart"
                android:onClick="onNumberClick"
                android:id="@+id/btn_zero"
                android:text="@string/zero"
                />


            <com.google.android.material.button.MaterialButton
                style="@style/Dark_Grey.Button"
                android:layout_marginHorizontal="@dimen/marginHorizontal"
                android:text="@string/point"/>



            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:id="@+id/btn_equal"
                android:onClick="onOperationClick"
                android:text="@string/equal"/>



        </LinearLayout>
</LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>